--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port 4200",
-    "build": "ng build",
+    "build-dev": "ng build",
     "watch": "ng build --watch --configuration development",
     "lint": "ng lint",
     "test": "ng test",
     "coverage": "ng test --no-watch --code-coverage",
     "serve": "node server.js",
-    "serve:ssr": "node dist/angular-starter/server/server.mjs"
+    "serve:ssr": "node dist/angular-starter/server/server.mjs",
+    "vercel-build": "npm run build:ssr"
   },
   "private": true,
   "dependencies": {
